--- a/index.html
+++ b/index.html
@@ -4,58 +4,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Autocar</title>
-
+    <title>myAutoCar</title>
     <!--Font Awsome link from https://cdnjs.com/libraries/font-awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 
     <!--Custom CSS File link-->
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <!--Header Section starts-->
-    <header class="header" >
+    <header class="header">
+        <!--Menu button for smaller screen-->
+        <div id="menu-btn" class="fas fa-bars"></div>
 
-        <div id="menu-btn" class="fas fa-bars" ></div>
-
-        <a herf="#" class="logo"><span>Auto</span>car</a>
-
-        <nav class="navbar" >
-            <a href="#home">Home</a>
-            <a href="#vehicles">Vehicles</a>
-            <a href="#services">Services</a>
-            <a href="#featured">Featured</a>
-            <a href="#reviews">Reviews</a>
-            <a href="#contact">Contact</a>
+        <!--Company Logo-->
+        <a href="#" class="logo"><span>myAuto</span>Car</a>
+        <!--Navigation Sections-->
+        <nav class="navbar">
+        <a href="#home">Home</a>
+        <a href="#vehicals">Vehicals</a>
+        <a href="#services">Services</a>
+        <a href="#featured">Featured</a>
+        <a href="#reviews">Reviews</a>
+        <a href="#contact">Contacts</a>
         </nav>
 
-        <!--Create a login button-->
+        <!--Login button-->
+
         <div id="login-btn">
-            <button class="btn">Login</button>
-            
-            <i class="fas fa-user"></i>
-        </div>
+        <button class="btn">Login</button>
+        <!--User Symbol for smaller screens-->
+        <i class="far fa-user"></i>
+         </div>
+
+
+
+
+
+
+
+
+
+
     </header>
-    <!--Header Section Ends-->
-
-    <!--Login Forms-->
-    <div class="login-form-container">
-        <span class="fas fa-times" id="close-login-form"></span>
-        <form action="">
-            <h3>User Login</h3>
-            <input type="email" placeholder="email" class="box">
-            <input type="password" placeholder="password" class="box">
-            <p>forgot your password<a href="#">Click here</a></p>
-            <input type="submit" value="login now" class="btn">
-            <p>or login with</p>
-            <div class="buttons">
-                <a href="#" class="btn">Google</a>
-                <a href="#" class="btn">Facebook</a>
-            </div>
-            <p>don't have an account <a href="#">create one</a></p>
-        </form>
-    </div>
-    
 
 
 
@@ -64,13 +55,6 @@
 
 
 
-
-
-
-
-
-
-    <!--Custom JS Link-->
-    <script src="JS/script.js"></script>
+     <script src="JS/script.js"></script>
 </body>
 </html>
