--- a/index.html
+++ b/index.html
@@ -37,16 +37,23 @@
         <i class="far fa-user"></i>
          </div>
 
-
-
-
-
-
-
-
-
-
     </header>
+
+    <!--Login Forms-->
+    <div class="login-form-container">
+        <form action="">
+            <h3>User login</h3>
+            <input type="email" placeholder="E-mail" class="box">
+            <input type="password" placeholder="password" class="box">
+            <p>forgot your password?</p>
+            <input type="submit" value="login now" class="btn">
+            <p> or login with</p>
+            <div class="buttons">
+                <a href="#" class="btn">google</a>
+                <a href="#" class="btn">facebook</a>
+            </div>
+            <p>don't have an account<a herf="#">Create one</a></p>
+    </div>
 
 
 
