--- a/index.html
+++ b/index.html
@@ -41,18 +41,20 @@
 
     <!--Login Forms-->
     <div class="login-form-container">
+
+        <span class="fas fa-times" id="close-login-form"></span>
         <form action="">
             <h3>User login</h3>
             <input type="email" placeholder="E-mail" class="box">
             <input type="password" placeholder="password" class="box">
-            <p>forgot your password?</p>
+            <p>forgot your password?<a href='#'>Click here</a></p>
             <input type="submit" value="login now" class="btn">
             <p> or login with</p>
             <div class="buttons">
                 <a href="#" class="btn">google</a>
                 <a href="#" class="btn">facebook</a>
             </div>
-            <p>don't have an account<a herf="#">Create one</a></p>
+            <p>don't have an account<a herf="#"> Create one</a></p>
     </div>
 
 
